--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -25,34 +25,34 @@
     "axios": "^0.19.2",
     "bignumber.js": "9.0.0",
     "chart.js": "^2.9.3",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "cryptocurrency-icons": "0.16.1",
     "electron-window-state": "^5.0.3",
     "font-awesome": "4.7.0",
     "lodash": "4.17.15",
-    "moment": "^2.24.0",
+    "moment": "^2.25.3",
     "roboto-fontface": "*",
     "tasklist": "4.0.1",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
-    "vue-property-decorator": "8.4.1",
+    "vue-property-decorator": "8.4.2",
     "vue-router": "3.1.6",
-    "vuetify": "2.2.20",
-    "vuex": "3.1.3"
+    "vuetify": "2.2.28",
+    "vuex": "3.4.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@cypress/code-coverage": "^3.2.1",
-    "@cypress/webpack-preprocessor": "^5.1.1",
-    "@types/chart.js": "2.9.18",
-    "@types/jest": "25.2.1",
-    "@types/lodash": "4.14.149",
-    "@types/node": "12.12.34",
-    "@types/webpack": "^4.41.10",
-    "@typescript-eslint/eslint-plugin": "2.27.0",
-    "@typescript-eslint/parser": "2.27.0",
+    "@babel/preset-env": "^7.9.6",
+    "@cypress/code-coverage": "^3.7.4",
+    "@cypress/webpack-preprocessor": "^5.2.1",
+    "@types/chart.js": "2.9.20",
+    "@types/jest": "25.2.2",
+    "@types/lodash": "4.14.151",
+    "@types/node": "12.12.39",
+    "@types/webpack": "^4.41.13",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-e2e-cypress": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
@@ -63,33 +63,33 @@
     "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "5.0.2",
-    "@vue/test-utils": "1.0.0-beta.32",
+    "@vue/test-utils": "1.0.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
-    "babel-jest": "25.2.6",
+    "babel-jest": "26.0.1",
     "babel-plugin-istanbul": "^6.0.0",
     "dotenv": "8.2.0",
-    "electron": "^8.2.1",
+    "electron": "^8.3.0",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-vue": "6.2.2",
     "eslint-plugin-vuetify": "1.0.0-beta.6",
     "flush-promises": "^1.0.2",
-    "jest": "25.2.7",
+    "jest": "26.0.1",
     "jest-junit": "^10.0.0",
     "nyc": "^15.0.1",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "promise-retry": "1.1.1",
-    "sass": "1.26.3",
+    "sass": "1.26.5",
     "sass-loader": "8.0.2",
-    "source-map-support": "^0.5.16",
+    "source-map-support": "^0.5.19",
     "spectron": "^10.0.1",
-    "start-server-and-test": "^1.10.11",
-    "ts-jest": "25.3.1",
-    "typescript": "~3.8.3",
+    "start-server-and-test": "^1.11.0",
+    "ts-jest": "^26.0.0",
+    "typescript": "3.8.3",
     "vue-cli-plugin-electron-builder": "2.0.0-beta.5",
     "vue-cli-plugin-vuetify": "2.0.5",
     "vue-jest": "^3.0.5",
